--- a/mysite/templates/mysite/index.html
+++ b/mysite/templates/mysite/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
-    <link rel="stylesheet" href="static/mysite/index.css">
+    <link rel="stylesheet" href="static/index.css">
 </head>
 <body>
     <h1>This is The home page</h1>
