--- a/templates/mysite/index.html
+++ b/templates/mysite/index.html
@@ -496,19 +496,19 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 			</footer>
 			<!-- End footer Area -->	
 
-			<script src="{% static 'vendor/jquery-2.2.4.min.js' %}"></script>
-			<script src="{% static 'popper.min.js' %}"></script>
-			<script src="{% static 'vendor/bootstrap.min.js' %}"></script>			
+			<script src="{% static 'js/vendor/jquery-2.2.4.min.js' %}"></script>
+			<script src="{% static 'js/popper.min.js' %}"></script>
+			<script src="{% static 'js/vendor/bootstrap.min.js' %}"></script>			
 			<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBhOdIF3Y9382fqJYt5I_sswSrEw5eihAA"></script>		
- 			<script src="{% static 'jquery-ui.js' %}"></script>					
-  			<script src="{% static 'easing.min.js' %}"></script>			
-			<script src="{% static 'hoverIntent.js' %}"></script>
-			<script src="{% static 'superfish.min.js' %}"></script>	
-			<script src="{% static 'jquery.ajaxchimp.min.js' %}"></script>
-			<script src="{% static 'jquery.magnific-popup.min.js' %}"></script>						
-			<script src="{% static 'jquery.nice-select.min.js' %}"></script>					
-			<script src="{% static 'owl.carousel.min.js' %}"></script>							
-			<script src="{% static 'mail-script.js' %}"></script>	
-			<script src="{% static 'main.js' %}"></script>	
+ 			<script src="{% static 'js/jquery-ui.js' %}"></script>					
+  			<script src="{% static 'js/easing.min.js' %}"></script>			
+			<script src="{% static 'js/hoverIntent.js' %}"></script>
+			<script src="{% static 'js/superfish.min.js' %}"></script>	
+			<script src="{% static 'js/jquery.ajaxchimp.min.js' %}"></script>
+			<script src="{% static 'js/jquery.magnific-popup.min.js' %}"></script>						
+			<script src="{% static 'js/jquery.nice-select.min.js' %}"></script>					
+			<script src="{% static 'js/owl.carousel.min.js' %}"></script>							
+			<script src="{% static 'js/mail-script.js' %}"></script>	
+			<script src="{% static 'js/main.js' %}"></script>	
 		</body>
 	</html>
