content block data is provided in index.html and static is loaded sepratly.

--- a/templates/mysite/index.html
+++ b/templates/mysite/index.html
@@ -1,3 +1,6 @@
+{% extends 'base.html' %}
+{% load static %}
+{% block content %}
 		<!-- start banner Area -->
 		<section class="banner-area relative">
 			<div class="overlay overlay-bg"></div>				
@@ -317,4 +320,4 @@
 			</div>	
 		</section>
 		<!-- End recent-blog Area -->			
-	
+{% endblock %}
