app name is provided in mysite.urls and header links are dynamic.

--- a/templates/base.html
+++ b/templates/base.html
@@ -59,8 +59,8 @@
 			      </div>
 			      <nav id="nav-menu-container">
 			        <ul class="nav-menu">
-			          <li><a href="index.html">Home</a></li>
-			          <li><a href="about.html">About</a></li>
+			          <li><a href="{% url 'mysite:index' %}">Home</a></li>
+			          <li><a href="{% url 'mysite:about' %}">About</a></li>
 			          <li class="menu-has-children"><a href="">Blog</a>
 			            <ul>
 			              <li><a href="blog-home.html">Blog Home</a></li>
