--- a/templates/base.html
+++ b/templates/base.html
@@ -78,7 +78,7 @@
 					          </li>					                		
 			            </ul>
 			          </li>					          					          		          
-			          <li><a href="contact.html">Contact</a></li>
+			          <li><a href="{% url 'mysite:contact' %}">Contact</a></li>
 			        </ul>
 			      </nav><!-- #nav-menu-container -->					      		  
 				</div>
