--- a/templates/blog/blog-home.html
+++ b/templates/blog/blog-home.html
@@ -86,7 +86,7 @@
 					<div class="row">
 						<div class="col-lg-8 posts-list">
 							
-
+							{% for post in posts %}
 							<div class="single-post row">
 								<div class="col-lg-3  col-md-3 meta-details">
 									<ul class="tags">
@@ -97,8 +97,8 @@
 									</ul>
 									<div class="user-details row">
 										<p class="user-name col-lg-12 col-md-12 col-6"><a href="#">Mark wiens</a> <span class="lnr lnr-user"></span></p>
-										<p class="date col-lg-12 col-md-12 col-6"><a href="#">12 Dec, 2017</a> <span class="lnr lnr-calendar-full"></span></p>
-										<p class="view col-lg-12 col-md-12 col-6"><a href="#">1.2M Views</a> <span class="lnr lnr-eye"></span></p>
+										<p class="date col-lg-12 col-md-12 col-6"><a href="#">{{ post.published_date|date:"j M, Y" }}</a> <span class="lnr lnr-calendar-full"></span></p>
+										<p class="view col-lg-12 col-md-12 col-6"><a href="#">{{ post.counted_views }} Views</a> <span class="lnr lnr-eye"></span></p>
 										<p class="comments col-lg-12 col-md-12 col-6"><a href="#">06 Comments</a> <span class="lnr lnr-bubble"></span></p>						
 									</div>
 								</div>
@@ -106,14 +106,14 @@
 									<div class="feature-img">
 										<img class="img-fluid" src="{% static 'img/blog/feature-img1.jpg' %}" alt="">
 									</div>
-									<a class="posts-title" href="blog-single.html"><h3>Astronomy Binoculars A Great Alternative</h3></a>
+									<a class="posts-title" href="blog-single.html"><h3>{{ post.title|title }}</h3></a>
 									<p class="excert">
 										MCSE boot camps have its supporters and its detractors. Some people do not understand why you should have to spend money on boot camp when you can get the MCSE study materials yourself at a fraction.
 									</p>
 									<a href="blog-single.html" class="primary-btn">View More</a>
 								</div>
 							</div>		
-									
+							{% endfor %}
 							
 		                    <nav class="blog-pagination justify-content-center d-flex">
 		                        <ul class="pagination">
