--- a/templates/blog/blog-home.html
+++ b/templates/blog/blog-home.html
@@ -86,7 +86,7 @@
 					<div class="row">
 						<div class="col-lg-8 posts-list">
 							
-							{% for post in posts %}
+							{% for post in published_posts %}
 							<div class="single-post row">
 								<div class="col-lg-3  col-md-3 meta-details">
 									<ul class="tags">
