--- a/templates/blog/blog-home.html
+++ b/templates/blog/blog-home.html
@@ -108,7 +108,7 @@
 									</div>
 									<a class="posts-title" href="blog-single.html"><h3>{{ post.title|title }}</h3></a>
 									<p class="excert">
-										MCSE boot camps have its supporters and its detractors. Some people do not understand why you should have to spend money on boot camp when you can get the MCSE study materials yourself at a fraction.
+										{{ post.content }}
 									</p>
 									<a href="blog-single.html" class="primary-btn">View More</a>
 								</div>
