--- a/templates/base.html
+++ b/templates/base.html
@@ -61,7 +61,7 @@
 			        <ul class="nav-menu">
 			          <li><a href="{% url 'mysite:index' %}">Home</a></li>
 			          <li><a href="{% url 'mysite:about' %}">About</a></li>
-			          <li class="menu-has-children"><a href="">Blog Home</a></li>	
+			          <li class="menu-has-children"><a href="">Blog</a></li>	
 			          <li class="menu-has-children"><a href="">Pages</a>
 			            <ul>
 			            	  <li><a href="elements.html">Elements</a></li>
