--- a/templates/blog/blog-home.html
+++ b/templates/blog/blog-home.html
@@ -106,7 +106,7 @@
 									<div class="feature-img">
 										<img class="img-fluid" src="{% static 'img/blog/feature-img1.jpg' %}" alt="">
 									</div>
-									<a class="posts-title" href="{% url 'blog:single' post.id %}"><h3>{{ post.title|title }}</h3></a>
+									<a class="posts-title" href="{% url 'blog:single' pid=post.id %}"><h3>{{ post.title|title }}</h3></a>
 									<p class="excert">
 										{{ post.content }}
 									</p>
