--- a/templates/blog/blog-single.html
+++ b/templates/blog/blog-single.html
@@ -32,7 +32,7 @@
 								<div class="col-lg-3  col-md-3 meta-details">
 									<ul class="tags">
 										{% for tag in post.category.all %}
-										<li><a href="#">{{ tag.name }}&nbsp;</a></li>
+										<li><a href="#">{{ tag.name }}</a></li>{% if not forloop.last %},{% endif %}
 										{% endfor %}
 									</ul>
 									<div class="user-details row">
