latest_posts tag is used in blog-home.html and inside it is dynamic post title.

--- a/templates/blog/blog-home.html
+++ b/templates/blog/blog-home.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
+{% load blog_tags %}
+
 {% block content %}
 			<!-- start banner Area -->
 			<section class="banner-area relative blog-home-banner" id="home">	
@@ -148,7 +150,7 @@
 								</div>
 								{% include 'blog/blog-writer.html' %}
 								
-								{% comment %} latest posts {% endcomment %}
+								{% latest_posts %}
 
 
 								{% include 'blog/blog-ads.html' %}
