--- a/templates/blog/blog-posts_categories.html
+++ b/templates/blog/blog-posts_categories.html
@@ -1,12 +1,13 @@
-{% load blog_tags %}
 <div class="single-sidebar-widget post-category-widget">
     <h4 class="category-title">Post Catgories</h4>
     <ul class="cat-list">
+        {% for category in categories %}
         <li>
             <a href="#" class="d-flex justify-content-between">
-                <p>Technology</p>
-                <p>37</p>
+                <p>{{ category.name }}</p>
+                <p>{{ category.count }}</p>
             </a>
-        </li>														
+        </li>
+        {% endfor %}							
     </ul>
 </div>
