all the bugs related to blog-posts_categories.html and posts_categories inclusion tag are solved.

--- a/templates/blog/blog-single.html
+++ b/templates/blog/blog-single.html
@@ -216,7 +216,7 @@
 								{% latest_posts %}
 								{% include 'blog/blog-ads.html' %}
 								
-								{% comment %} blog categories {% endcomment %}
+								{% posts_categories %}
 
 								<div class="single-sidebar-widget newsletter-widget">
 									<h4 class="newsletter-title">Newsletter</h4>
