--- a/templates/blog/blog-posts_categories.html
+++ b/templates/blog/blog-posts_categories.html
@@ -1,13 +1,15 @@
 <div class="single-sidebar-widget post-category-widget">
     <h4 class="category-title">Post Catgories</h4>
     <ul class="cat-list">
-        {% for category in categories %}
-        <li>
-            <a href="#" class="d-flex justify-content-between">
-                <p>{{ category.name }}</p>
-                <p>{{ category.count }}</p>
-            </a>
-        </li>
+        {% for category, count in categories.items %}
+            {% if count > 0 %}
+            <li>
+                <a href="#" class="d-flex justify-content-between">
+                    <p>{{ category }}</p>
+                    <p>{{ count }}</p>
+                </a>
+            </li>
+            {% endif %}
         {% endfor %}							
     </ul>
 </div>
