newsletter bug fixed.

--- a/templates/base.html
+++ b/templates/base.html
@@ -128,8 +128,8 @@
 								For business professionals caught between high OEM price and mediocre print and graphic output.									
 							</p>								
 							<div id="mc_embed_signup">
-								<form action="{% url 'mysite:newsletter' %}" method="post" class="subscription relative">
-									
+								<form action="{% url 'mysite:newsletter' %}" method="POST" class="subscription relative">
+									{% csrf_token %}
 									<div class="input-group d-flex flex-row">
 										<input name="email" placeholder="Email Address" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Email Address '" required="" type="email">
 										<button class="btn bb-btn" type="submit" ><span class="lnr lnr-location"></span></button>		
