--- a/templates/blog/blog-latest_posts.html
+++ b/templates/blog/blog-latest_posts.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load humanize %}
 <div class="single-sidebar-widget popular-post-widget">
     <h4 class="popular-title">Latest Posts</h4>
     <div class="popular-post-list">
@@ -9,7 +10,7 @@
             </div>
             <div class="details">
                 <a href="{% url 'blog:single' pid=post.id %}"><h6>{{ post.title|title }}</h6></a>
-                <p>{{ post.published_date|date:'d M Y' }}</p>
+                <p>{{ post.published_date|naturalday }}</p>
             </div>
         </div>
         {% endfor %}							
