--- a/templates/blog/blog-latest_posts.html
+++ b/templates/blog/blog-latest_posts.html
@@ -10,7 +10,7 @@
             </div>
             <div class="details">
                 <a href="{% url 'blog:single' pid=post.id %}"><h6>{{ post.title|title }}</h6></a>
-                <p>{{ post.published_date|naturalday }}</p>
+                <p>{{ post.published_date|naturaltime }}</p>
             </div>
         </div>
         {% endfor %}							
