--- a/templates/blog/blog-tags.html
+++ b/templates/blog/blog-tags.html
@@ -2,7 +2,7 @@
     <h4 class="tagcloud-title">Tag Clouds</h4>
     <ul>
         {% for tag in post.tags.all %}
-        <li><a href="#">{{ tag.name }}</a></li>
+        <li><a href="{% url 'blog:tag' tag.name %}">{{ tag.name }}</a></li>
         {% endfor %}
     </ul>
 </div>	
